make it able to get items and recipes from mods that are not supported yet